Finished exercise and challenges

--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="main.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <article id="congressional-rep">
+    <section>
+      <h3>Jim Cooper</h3>
+      <img src="https://www.govtrack.us/data/photos/400081-100px.jpeg" alt="">
+      <p>Representative for Tennessee's 5th congressional district</p>
+      <p>Democrat</p>
+    </section>
+    
+    <section>
+      <h3>Committees</h3>
+      <ul>
+        <li>House Committee on Armed Services</li>
+        <li>Strategic Forces</li>
+        <li>Emerging Threats and Capabilities</li>
+      </ul>
+    </section>
+
+    <section>
+      <h3>Legislations</h3>
+      <ul>
+        <li>
+          <a href="https://www.govtrack.us/congress/bills/112/hr482">H.R. 482 (112th): Water Heater Rating Improvement Act of 2011</a>
+        </li>
+        <li>
+            <a href="https://www.govtrack.us/congress/bills/110/hr928">H.R. 928 (110th): Inspector General Reform Act of 2008</a>
+        </li>
+        <li>
+          <a href="https://www.govtrack.us/congress/bills/103/hjres297">H.J.Res. 297 (103rd): To designate 1994 as “The Year of Gospel Music”.</a>
+        </li>
+      </ul>
+    </section>
+  </article>
+
+  <script src="main.js"></script>
 </body>
 </html>
